# scale_truck_control_carla

./: README.md
CACC/: CMakeLists.txt  package.xml
CACC/include/: CACC_sumo_node.hpp
CACC/src/: CACC_sumo_node.cpp
config/: .LV.yaml.swp  FV1.yaml  FV2.yaml  LV.yaml  config.yaml  fusing.yaml  tracking.yaml  yolo.yaml
control/lateral_control/lane_keeping/: CMakeLists.txt  package.xml
control/lateral_control/lane_keeping/include/: lane_keeping.hpp
control/lateral_control/lane_keeping/src/: lane_keeping.cpp
control/longitudinal_control/: CMakeLists.txt  package.xml
control/longitudinal_control/include/speed_control/: speed_control_node.hpp
control/longitudinal_control/src/: speed_control_node.cpp
detection/3d_lidar_clustering_carla/: CMakeLists.txt  README.md  package.xml
detection/3d_lidar_clustering_carla/src/: lidar_vehicle_detection_node.cpp
detection/camera_lidar_fusion/carla-caemra-radar-fusion-main/: CMakeLists.txt  package.xml
detection/camera_lidar_fusion/carla-caemra-radar-fusion-main/include/: test_fusion_lidar_node.hpp
detection/camera_lidar_fusion/carla-caemra-radar-fusion-main/src/: main.cpp  test_fusion_lidar_node.cpp
detection/camera_radar_fusion/carla-caemra-radar-fusion-main/: CMakeLists.txt  package.xml
detection/camera_radar_fusion/carla-caemra-radar-fusion-main/include/: test_fusion_node.hpp
detection/camera_radar_fusion/carla-caemra-radar-fusion-main/src/: main.cpp  test_fusion_node.cpp
detection/euclidean_cluster/: CMakeLists.txt  package.xml
detection/euclidean_cluster/include/: euclidean_cluster.hpp
detection/euclidean_cluster/src/: euclidean_cluster.cpp
detection/lane_detection/sliding_window_lane_detection/: CMakeLists.txt  package.xml
detection/lane_detection/sliding_window_lane_detection/include/: lane_detect.hpp
detection/lane_detection/sliding_window_lane_detection/src/: lane_detect.cpp
detection/lane_detection/ultra_fast_lane_detection/: CMakeLists.txt  package.xml
detection/lane_detection/ultra_fast_lane_detection/include/: lane_detect.hpp
detection/lane_detection/ultra_fast_lane_detection/src/: lane_detect.cpp
detection/obstacle_detection/: CMakeLists.txt  package.xml
detection/obstacle_detection/include/: pcl_obstacle_detection.hpp
detection/obstacle_detection/src/: main.cpp  pcl_object_detection.cpp  pcl_obstacle_detection.cpp  pcl_obstacle_detection.hpp
detection/sensor_fusing_ros2/: CMakeLists.txt  package.xml
detection/sensor_fusing_ros2/config/: fusing.yaml
detection/sensor_fusing_ros2/include/: sensor_fusing_node.hpp
detection/sensor_fusing_ros2/src/: main.cpp  sensor_fusing_node.cpp
detection/yolo_object_detection/: CMakeLists.txt  README.md  package.xml
detection/yolo_object_detection/config/: cam_params.yaml
detection/yolo_object_detection/darknet/: Makefile
detection/yolo_object_detection/darknet/include/: yolo_v2_class.hpp
detection/yolo_object_detection/darknet/src/: box.h  dark_cuda.h  data.h  getopt.h  image_opencv.cpp  layer.h  network.h  option_list.h  parser.c  yolo_v2_class.cpp
detection/yolo_object_detection/darknet/yolo_network_config/names/: obj.names
detection/yolo_object_detection/include/: yolo_object_detection_node.hpp
detection/yolo_object_detection/launch/: yolo_object_detection.launch.py
detection/yolo_object_detection/src/: main.cpp  yolo_object_detection_node.cpp
detection/yolo_object_detection/yolo_network_config/: obj.data
detection/yolo_object_detection/yolo_network_config/cfg/: yolov3-tiny-sv.cfg  yolov4-custom.cfg  yolov7-custom.cfg
detection/yolo_object_detection/yolo_network_config/names/: obj.names  sv.names
interface/: CMakeLists.txt  package.xml
interface/include/: interface.hpp
interface/src/: interface.cpp  main.cpp
lane_detection_ros2/: CMakeLists.txt
lane_detection_ros2/include/: lane_detect.hpp
lane_detection_ros2/src/: lane_detect.cpp  main.cpp
launch/: CMakeLists.txt  package.xml
launch/launch/: FV1.launch.py  FV2.launch.py  FV3.launch.py  LV.launch.py
object_detection_ros2/src/: pcl_object_detection.cpp  pcl_object_detection.hpp
object_tracking_ros2/: CMakeLists.txt  package.xml
object_tracking_ros2/config/: tracking.yaml
object_tracking_ros2/include/: object_tracking_node.hpp
object_tracking_ros2/src/: kalman_filter.h  matrix.h  munkres.cpp  object_tracking_node.cpp  track.cpp  track.h  tracker.cpp  tracker.h  tracker_utils.h
plan/: CMakeLists.txt
plan/carla_gnss_converter/: CMakeLists.txt  package.xml
plan/carla_gnss_converter/src/: gnss_converter.cpp
plan/include/: planner.hpp
plan/planner/: package.xml
plan/planner/include/: planner.hpp
plan/planner/src/: planner.cpp
plan/plannerwotrack/: CMakeLists.txt  package.xml
plan/plannerwotrack/include/: planner.hpp
plan/plannerwotrack/src/: planner.cpp
plan/src/: main.cpp  planner.cpp
ros2_msg/: CMakeLists.txt
ros2_msg/msg/: Bbox.msg  BboxArray.msg  Cmd2xav.msg  Fusing.msg  FusingArray.msg  Lane2xav.msg  Target.msg  Tracking.msg  TrackingArray.msg  Xav2cmd.msg  Xav2lrc.msg
scale_truck_control_ros2/: CMakeLists.txt
scale_truck_control_ros2/config/: FV1.yaml  FV2.yaml  LV.yaml  config.yaml
scale_truck_control_ros2/include/lrc/: lrc.hpp
scale_truck_control_ros2/include/scale_truck_control/: ScaleTruckController.hpp
scale_truck_control_ros2/launch/: FV1.launch.py  FV2.launch.py  LV.launch.py  LV_tmp.launch.py
scale_truck_control_ros2/src/: .scale_truck_control.cpp.swo  lrc.cpp  scale_truck_control.cpp
scale_truck_control_ros2/src/controller/: controller.cpp
speed_control/: CMakeLists.txt
speed_control/include/speed_control/: speed_control_node.hpp
speed_control/src/: speed_control_node.cpp
tracking/object_tracking_ros2/: CMakeLists.txt
tracking/object_tracking_ros2/config/: tracking.yaml
tracking/object_tracking_ros2/src/: kalman_filter.cpp  kalman_filter.h  main.cpp  matrix.cpp  matrix.h  munkres.h  object_tracking_node.cpp  object_tracking_node.hpp  track.cpp  track.h  tracker.cpp  tracker.h  type.h
v2v/: CMakeLists.txt  package.xml
v2v/include/: v2v.hpp
v2v/src/: main.cpp  v2v.cpp
