<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_keeping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sws9912@kookmin.ac.kr">avees</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
